Fix T77564: VSE (and compositor background) lost stereoscopy preview

Issue introduced on fe045b2b77dc6d7f0b552619fe824b496d34db6c.

Since the stereoscopy compositing (anaglyph, ...) is only done for
viewports the VSE preview and compositor need to use viewports.

Reviewed by: dfelinto

Differential Revision: https://developer.blender.org/D8472