source/blender/editors/space_node/node_draw.c
@@ -52,6 +52,7 @@
 #include "GPU_immediate_util.h"
 #include "GPU_matrix.h"
 #include "GPU_state.h"
+#include "GPU_viewport.h"
 
 #include "WM_api.h"
 #include "WM_types.h"
@@ -1754,6 +1755,12 @@ void drawnodespace(const bContext *C, ARegion *region)
   wmWindow *win = CTX_wm_window(C);
   SpaceNode *snode = CTX_wm_space_node(C);
   View2D *v2d = &region->v2d;
+
+  /* Setup offscreen buffers. */
+  GPUViewport *viewport = WM_draw_region_get_viewport(region);
+
+  GPUFrameBuffer *framebuffer_overlay = GPU_viewport_framebuffer_overlay_get(viewport);
+  GPU_framebuffer_bind_no_srgb(framebuffer_overlay);
 
   UI_ThemeClearColor(TH_BACK);
   GPU_clear(GPU_COLOR_BIT);
